<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Choose a sample</string>
    <string name="title_tutorial_wizard">Tutorial Wizard</string>
    <string name="title_form_wizard">Form Wizard</string>
    <string name="hint_firstname">Enter your First Name</string>
    <string name="hint_lastname">Enter your Last Name</string>
    <string name="hint_caregiver_first_name">Enter Your Primary Caregiver\'s first name.</string>
    <string name="hint_caregiver_last_name">Enter Your Primary Caregiver\'s last name.</string>
    <string name="sample_form_text">This example shows you how you can have a form in multiple steps. Fill up the form and hit Next.</string>
    <string name="sample_form_summary">Here is a summary of what you have entered in the previous step:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base_camp">BaseCamp</string>
    <string name="app_name">AfterCare</string>
    <string name="base_camp_image_description">Base Camp Image Button</string>
    <string name="myProfileDescription">My Profile Page Image Button</string>
    <string name="myPersonalInfoDescription">My Personal Info and Treatment Image Button</string>
    <string name="calendarDescription">Calendar Button</string>
    <string name="addAppointmentDescription">Add Event to Calendar</string>
    <string name="viewCalendarDescription">View Calendar</string>
    <string name="title_activity_my_personal_info">MyPersonalInfo</string>
    <string name="title_activity_my_profile_and_treatment">My Profile And Treatment</string>
    <string name="title_activity_calendar">Calendar Portion</string>
    <string name="title_activity_calendar_add_appointment">Add an appointment to the calendar</string>
    <string name="title_activity_personal_info_step1">PersonalInfoStep1</string>
    <string name="personal_info_form_start">Please input the following Personal Information for your record keeping.</string>
    <string name="my_profile_form_start">Please input the following Treatment and Diagnosis Information for record keeping.</string>
    <string name="title_activity_personal_info_step2">PersonalInfoStep2</string>
    <string name="hint_dateBirth">Date of Birth</string>
    <string name="hint_dateDiagnosis">Date of Diagnosis</string>
    <string name="hint_ageDiagnosis">Age of Diagnosis</string>
    <string name="hint_caregiverdateBirth">Caregiver Date of Birth</string>
    <string name="hint_caregiverdateDiagnosis">Caregiver Date of Diagnosis</string>
    <string name="hint_caregiverageDiagnosis">Caregiver Age of Diagnosis</string>
    <string name="title_activity_personal_info_step3">Personal Info Step 3</string>
    <string name="number_of_emergency_contacts">Number of Emergency Contacts</string>
    <string name="title_activity_my_profile">My Profile and Treatment</string>
    <string name="title_activity_my_profile_step1">My Profile: Cancer Diagnosis</string>
    <string name="cancer_type">Cancer Type</string>
    <string name="cancer_location">Cancer Location</string>
    <string name="cancer_estrogen_receptor">Estrogen Receptor</string>
    <string name="cancer_progesterone_receptor">Progesterone Receptor</string>
    <string name="cancer_Her2">Her2</string>
    <string name="title_activity_my_profile_step2">My Profile: Treatment</string>
    <string name="biopsy_date">Biopsy Date</string>
    <string name="surgery_date">Surgery Date</string>
    <string name="radiation_therapy_date">Radiation Therapy Date</string>
    <string name="chemotherapy_date">Chemotherapy Date</string>
    <string name="genetic_test_date">Genetic Testing Date</string>
    <string name="select_date">Select Date</string>
    <string name="go_next">Next</string>
    <string name="spaceholder"></string>
    <string name="title_activity_my_profile_step3">My Profile: Medication</string>
    <string name="title_activity_calendar_step1">Calendar: Intro</string>
    <string name="hint_drugs_taken_during_treatment">Drugs Taken During Treatment</string>
    <string name="hint_drugs_taken_now">Current Medication</string>
    <string name="hint_allergies">Allergies</string>
    <string name="hint_pharmacy_name">Pharmacy Name</string>
    <string name="hint_pharmacy_location">Pharmacy Location</string>
    <string name="title_activity_my_profile_step4">My Profile: HealthCare Providers</string>
    <string name="hint_primaryCarePhysician">Primary Care Physician</string>
    <string name="hint_oncologist">Oncologist</string>
    <string name="hint_surgeon">Surgeon</string>
    <string name="hint_radiologist">Radiologist</string>
    <string name="hint_cancerCareCenterName">Cancer Care Center</string>
    <string name="hint_OBGYN">OB/GYN</string>
    <string name="hint_supportGroupContact">Support Group Contact</string>
    <string name="title_activity_my_profile_summary">My Profile Summary</string>
	<string name="finish_form">Finish Form</string>
	<string name="email_as_attachment">Email My Profile</string>
	<string name="title_my_profile_summary">Summary of My Profile</string>
	<string name="hint_review_info">Please Review the Following Information</string>
	<string name="appointment_title">Who will you see be seeing?</string>
	<string name="appointment_location">Where is the appointment?</string>
	<string name="appointment_date">What is the date of the appointment?</string>
	<string name="appointment_start_time">What time does the appointment start?</string>
	<string name="appointment_end_time">What time does the appointment end?</string>
</resources>
