<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caregiverFirstName"
            android:hint="@string/hint_caregiver_first_name"/>
    
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caregiverLastName"
            android:hint="@string/hint_caregiver_last_name"/>
    
     <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caregiverdateofBirth"
            android:hint="@string/hint_caregiverdateBirth"/>
       
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caregiverdateofDiagnosis"
            android:hint="@string/hint_caregiverdateDiagnosis"/>
          
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caregiverageOfDiagnosis"
            android:hint="@string/hint_caregiverageDiagnosis"/>

</LinearLayout>
