<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BaseCamp" >

      <ImageButton
        android:id="@+id/personalInfoImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/personal_info"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/myPersonalInfoDescription"
        android:onClick="personalInfoClick"
        />
      
      <ImageButton
        android:id="@+id/myProfileImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/my_profile"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/myProfileDescription"
        android:onClick="myProfileClick"
        />

      <ImageButton
          android:id="@+id/calendarImageButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/personalInfoImageButton"
          android:layout_below="@+id/personalInfoImageButton"
          android:contentDescription="@string/calendarDescription"
          android:onClick="calendarClick"
          android:src="@drawable/calendar" />

</RelativeLayout>