<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProfileSummary"
            android:text="@string/title_my_profile_summary"/>

    <TextView
        android:id="@+id/hintReviewInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_review_info" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_cancerType"
           />
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_cancerLocation"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_estrogenReceptor"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_progesteroneReceptor"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_her2Level"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_biopsyDate"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_surgeryDate"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_radiationTherapyDate"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_chemotherapyDate"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_geneticTestingDate"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_treatmentMedication"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_currentMedication"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_allergies"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_pharmacyName"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_pharmacyLocation"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_primaryCare"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_oncologist"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_surgeon"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_OBGYN"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_radiologist"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_cancerCareCenter"
            />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_supportGroupContact"
            />
    
    <Button
            android:id="@+id/my_profile_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_form"
            android:onClick="onFinishForm" />
    
    <Button
            android:id="@+id/send_attachment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_as_attachment"
            android:onClick="onSendasAttachment" />

</LinearLayout>
    </ScrollView>